<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.nerea.layoutsextra1.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:background="@color/azulOscuro"
        android:textColor="@color/negro"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/icono"
            android:background="@color/verdeClaro" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/verdeClaro">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:id="@+id/textView2"
                android:gravity="center"
                android:textColor="@color/negro"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:id="@+id/textView3"
                android:textColor="@color/negro"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:background="@color/azulOscuro">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/azulClaro">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verPerfil"
                android:id="@+id/button"
                android:textColor="@color/negro" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cargarInfo"
                android:id="@+id/button2"
                android:textColor="@color/negro" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/actualizar"
                android:id="@+id/button3"
                android:textColor="@color/negro" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:background="@color/verdeOscuro">

            <ImageView
                android:layout_width="143dp"
                android:layout_height="166dp"
                android:id="@+id/imageView2"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/mapa" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/localizame"
                android:id="@+id/button4"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/negro" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto"
        android:id="@+id/textView5"
        android:layout_alignParentBottom="false"
        android:layout_above="@+id/textView4"
        android:background="@color/verdeOscuro"
        android:textColor="@color/rojo"
        android:gravity="center"
        android:ellipsize="marquee"
        android:scrollHorizontally="true"
        android:lines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true"
        android:background="@color/negro"
        android:padding="30dp" />

</RelativeLayout>
